[project]
name = "creative-coding"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "autoflake>=2.3.1",
    "black>=26.1.0",
    "ipywidgets>=8.1.8",
    "isort>=7.0.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.3",
    "jupyterlab-code-formatter>=3.0.2",
]
